--- a/src/app/data/data.component.css
+++ b/src/app/data/data.component.css
@@ -1,5 +1,5 @@
 main {
-  width: 100%;
+  max-width: 100%;
   min-height: 100%;
   display: flex;
   justify-content: flex-start;
@@ -8,6 +8,23 @@ main {
   position: relative;
   flex-direction: column;
   padding: 15px;
+
+}
+.addDataBtn {
+  border: none;
+  background-color: rgb(71, 110, 238);
+  border: 1px solid rgb(71, 110, 238);
+  width: 100%;
+  color: white;
+  padding: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.addDataBtn:hover {
+  background-color: white;
+  border: 1px solid rgb(71, 110, 238);
+  color: black;
 }
 .formData {
   display: flex;
@@ -23,6 +40,57 @@ main {
   border-radius: 5px;
   padding: 5px;
 }
-.inputData::selection{
+.inputData::selection {
   border: 1px solid rgb(40, 113, 248) !important;
+}
+.dataGrid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 20px;
+}
+
+.newDataForm {
+  position: fixed;
+  top: 25;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 9999;
+  background-color: rgb(78, 40, 248);
+  height: 45vh;
+  width: 40vw;
+  color: white;
+}
+.newDataIFrom {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: flex-start;
+  justify-content: flex-start;
+  align-items: center;
+}
+.inputNewData {
+  border: 1px solid rgb(255, 255, 255);
+  height: 35px;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: transparent;
+  color: white;
+  width: 90%;
+  margin-bottom: 15px;
+}
+.saveBtn {
+  border: 1px solid rgb(255, 255, 255);
+  height: 35px;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: transparent;
+  color: white;
+  width: 90%;
+  margin-bottom: 15px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.saveBtn:hover{
+scale: 1.01;
 }
